<resources>

    <!-- General -->
    <string name="example_title">ExampleFragment</string>
    <string name="example_random_description">Press the button to generate a random number</string>
    <string name="example_randomize">Randomize</string>
    <string name="example_wolox">WOLOX</string>
    <string name="example_wolox_phone">0800 123 4567</string>
    <string name="example_message">The presenter generated the number %1$d and this view is displaying it</string>
    <string name="view_pager_title">Username: %1$s\nFavourite color: %2$s</string>
    <string name="random_toolbar_title">Random number example</string>
    <string name="request_toolbar_title">Example Request</string>
    <string name="fragment_example_username">Username</string>
    <string name="fragment_example_favourite_color">Your favourite color</string>
    <string name="fragment_example_login">Login</string>
    <string name="fragment_request_search">Search</string>
    <string name="fragment_request_post_id">Post id</string>
    <string name="fragment_request_invalid_input">Invalid input, please enter a valid id.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_name">First Name (recomended)</string>
    <string name="last_name">Last Name (recomended)</string>
    <string name="sign_up">SIGN UP</string>
    <string name="log_in">LOG IN</string>
    <string name="email">Email</string>
    <string name="password">contraseña</string>
    <string name="terms">By joining you agree to our <u>Terms &amp; Conditions</u></string>
    <string name="prefs_name">LOGIN_STATE</string>
    <string name="isUserLogin">state</string>

    <string name="error_values">Usuario o Constraseña Incorrecto</string>
    <string name="error_conexion">"Error en la conexion a internet"</string>
    <string name="loading">Cargando...</string>
    <string name="error_email">Debe ingresar el email</string>
    <string name="error_password">Debe ingresar la contraseña</string>
    <string name="error_format">El correo debe tener el formato example@domain.com</string>
    <string name="news_fragment">news</string>
    <string name="profile_fragment">profile</string>
    <string name="empty_news">Empty Section</string>
    <string name="news_title">Ali Connors</string>
    <string name="news_content">I´ll be in you neighborhood doing errands...</string>
    <string name="news_timeago">15m</string>

    <string name="comment">comment</string>
    <string name="commenter">commenter</string>
    <string name="time_ago">timeago</string>
    <string name="is_news_liked">isnewsliked</string>
    <string name="news_id">newsid</string>
</resources>



